--- a/app/chatbot/config.yaml
+++ b/app/chatbot/config.yaml
@@ -1,5 +1,5 @@
 prompts:
-  system: "You are an expert in food and agriculture."
+  system: "Respond to all questions in a concise and direct manner, demonstrating your expertise through the content of your answers"
 
 model: llama3.2
 embedding-model: nomic-embed-text
