Modified output sections structure. Added one more section.

--- a/.gitignore
+++ b/.gitignore
@@ -49,10 +49,12 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 
-
+# IDE Files
+/.idea/.gitignore.idea
 
 
 
 
 # Chatbot
 app/chatbot/vectorstore
+
