Add batching, logging and fix requirements.txt

--- a/app/chatbot/config.yaml
+++ b/app/chatbot/config.yaml
@@ -1,9 +1,9 @@
 prompts:
   system: "Respond to all questions in a concise and direct manner, demonstrating your expertise through the content of your answers"
 
-model: llama3.2
+model: llama3.1:8b
 embedding-model: nomic-embed-text
-dataset-dir: datasets/MarineRestorationAnalysis/pdf
-# dataset-dir: datasets/1.literature_pdf_big_sample/
-embeddings-dir: vectorstore
+# dataset-dir: datasets/MarineRestorationAnalysis/pdf
+dataset-dir: /mnt/10TB/iordanissapidis/datasets/large
+embeddings-dir: /mnt/10TB/iordanissapidis/datasets/vectorstore
 temperature: 0
