--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ langchain_core==0.3.19
 langchain_ollama==0.2.0
 langchain_text_splitters==0.3.2
 PyYAML==6.0.1
+
+
+
+# Local KG_RAG library
+-e ./path_to_KG_RAG_library
