--- a/app/chatbot/config.yaml
+++ b/app/chatbot/config.yaml
@@ -5,3 +5,6 @@ ingestion:
 retrieval:
   persist-dir: /mnt/10TB/iordanissapidis/datasets/vectorstore
   score-threshold: 0.6
+
+generation:
+  model: llama3.1:8b
